fix(root page): description <-> url spacing

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -61,7 +61,7 @@
   .view__description {
     font-size: 18px !important;
     padding-left: 0;
-    padding-right: 0;
+    padding-right: 10px;
   }
 
   .view__readme {
