--- a/_sass/_view.scss
+++ b/_sass/_view.scss
@@ -153,7 +153,6 @@ $view-field-value-max-height: 170px;
 
 .view__websiteURL {
   display: inline;
-  padding-left: 10px;
 }
 
 .view__description_wrap {
